[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/JetBrainsMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://app/gui/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41431
margin_right = 1.41431
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 252.0
margin_bottom = 608.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 252.0

[node name="Options" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 252.0
margin_bottom = 216.0

[node name="New game" type="Button" parent="HBoxContainer/VBoxContainer/Options"]
margin_right = 252.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "New game"

[node name="Continue" type="Button" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 72.0
margin_right = 252.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Continue"

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 144.0
margin_right = 252.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 252.0
margin_bottom = 234.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 256.0
margin_right = 256.0
margin_bottom = 608.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 304.0
margin_bottom = 304.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options/New game" to="." method="_on_New_game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options/Exit" to="." method="_on_Exit_pressed"]
